--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-snappy": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jimmyjs/laravel-report-generator": "^2.2",
         "laravel/framework": "^9.11",
         "laravel/jetstream": "^2.7",
         "laravel/sanctum": "^2.14.1",
